hphp/hack/test/typecheck/map_non_static.php.coeffects.exp
File "map_non_static.php", line 8, characters 45-49:
Invalid expression in constant initializer (Parsing[1002])
File "map_non_static.php", line 8, characters 45-49:
Variable `$#capability` is undefined, or not always defined. (Naming[2050])
